--- a/sample/index.html
+++ b/sample/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.4.0/bluebird.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.2.1/chroma.min.js"></script>
     <script src="kendo-sdk/js/jquery.min.js"></script>
     <script src="kendo-sdk/js/jszip.min.js"></script>
     <script src="kendo-sdk/js/kendo.all.min.js"></script>
