chore(sample): updated gitbook url

--- a/sample/src/installation/installation.html
+++ b/sample/src/installation/installation.html
@@ -1,7 +1,7 @@
 <template>
   <div style="height: 790px;">
 
-    <iframe src="https://aurelia-ui-toolkits.gitbooks.io/kendoui-sdk-installation/content/index.html"
+    <iframe src="https://aurelia-ui-toolkits.gitbooks.io/kendo-ui-sdk-installation-beta/content/"
             width="96%" height="780px" >
             <p>Your browser does not support iframes.</p>
     </iframe>
