--- a/sample/index.html
+++ b/sample/index.html
@@ -27,6 +27,15 @@
     <script>
       System.import('aurelia-bootstrapper');
 
+      // in order to test changes we don't want to modify the "online"
+      // samples.json (https://raw.githubusercontent.com/aurelia-ui-toolkits/aurelia-kendoui-samples/gh-pages/samples.json)
+      // so we use a local samples.json file that we can modify without affecting the deployed catalog
+      System.config({
+        paths: Object.assign({}, System.paths, {
+          "samplesJSON/*": "src/samples/*"
+        })
+      });
+
       // Load the package.json from the root to get the package name
       System.import("root/package.json!").then(function(m) {
         var cfg = {
