--- a/sample/src/samples/sample-runner.html
+++ b/sample/src/samples/sample-runner.html
@@ -1,4 +1,5 @@
 <template>
+  <require from="aurelia-kendoui-bridge/tabstrip/tabstrip"></require>
     <!-- Page is shared by all widgets and sets up the sub-navigation pane -->
   <section>
   <br>
