chore(sample): gist-list

--- a/sample/src/shared/gist-list.html
+++ b/sample/src/shared/gist-list.html
@@ -8,8 +8,8 @@
     </div>
   </div>
   <div class="col-md-8">
-    <button click.delegate="wind.open().center()">Requires</button>
-    <div style="margin: 0px; padding: 0px; overflow: hidden">
+    <button click.delegate="wind.open().center()" style=" position: fixed; top: 50px">Requires</button>
+    <div style="margin: 0px; padding: 0px; overflow: hidden;">
       <iframe src.bind="currentGist" frameborder="0" style="overflow: hidden; height: 500px; width: 80%; position: fixed; top: 107px" height="500px" width="80%">
 
       </iframe>
