chore(sample): gist-list

--- a/sample/src/shared/gist-list.html
+++ b/sample/src/shared/gist-list.html
@@ -17,6 +17,6 @@
   </div>
 
   <div ak-window="k-widget.bind: wind; k-visible.bind: false">
-    <p repeat.for="req of selectedCategory.requires">&lt;require&gt;${req}&lt;/require&gt;</p>
+    <p repeat.for="req of selectedCategory.requires">&lt;require from="${req}"&gt;&lt;/require&gt;</p>
   </div>
 </template>
