chore(sample): added beta message

--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -11,6 +11,7 @@
       </ul>
       <div>
         <section>
+          <h3 style="color: red; color: red; text-align: center;">Announcing KendoUI Bridge version 1.0.0 Beta<br/><a href="http://blog.aureliatools.com/#post6">Click here</a> for more details</a></h3>
           <br>
           <div class="k-header header">
             <div style="margin:auto;text-align:center">
