--- a/sample/src/app.html
+++ b/sample/src/app.html
@@ -6,5 +6,12 @@
 
   <div class="page-host">
     <router-view></router-view>
+
+    <div style="height: 50px; background-color: #edebeb; margin: 16px; padding: 5px;">
+      <p style="display: inline; float: left;">Announcing KendoUI Bridge version 1.0.0 Beta<br/><a href="http://blog.aureliatools.com/#post6">Click here</a> for more details</a></p>
+      <p style="display: inline; float: right; line-height: 40px;">
+        &copy; Aurelia-UI-Toolkits
+      </p>
+    </div>
   </div>
 </template>
