fix(sample): fixed progress bar link in catalog index
closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues/665

--- a/sample/src/catalog-index/controls.html
+++ b/sample/src/catalog-index/controls.html
@@ -197,7 +197,7 @@
                   <img src="images/blue.png">
                   <a href="#/samples/drag-and-drop">Drag &amp; Drop</a>      <br>
                   <img src="images/blue.png">
-                  <a href="#/samples/progressbar">ProgressBar</a>            <br>
+                  <a href="#/samples/progress-bar">ProgressBar</a>            <br>
                   <img src="images/blue.png">
                   <a href="#/samples/sortable">Sortable</a>                  <br>
                </div>
