chore(sample): added range slider to catalog index
closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues/661

--- a/sample/src/catalog-index/controls.html
+++ b/sample/src/catalog-index/controls.html
@@ -86,6 +86,8 @@
                    <img src="images/blue.png">
                    <a href="#/samples/numerictextbox">Numeric TextBox</a>    <br>
                    <img src="images/blue.png">
+                   <a href="#/samples/rangeslider">Range slider</a>          <br>             
+                   <img src="images/blue.png">
                    <a href="#/samples/slider">Slider</a>                     <br>
                    <img src="images/blue.png">
                    <a href="#/samples/timepicker">TimePicker</a>             <br>
