chore(sample): fixed gantt chart samples
closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues/674

--- a/sample/src/samples/sample-runner.html
+++ b/sample/src/samples/sample-runner.html
@@ -29,7 +29,7 @@
               <div id="${sample.route}">
                 <i class="fa fa-spinner fa-spin fa-2x" show.bind="loading"></i>
 
-                <div ref="sampleTarget" show.bind="!loading"></div>
+                <div ref="sampleTarget"></div>
               </div>
             </div>
           </collapse-panel>
