chore(sample): added test page
should make development easier

--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -10,6 +10,9 @@
     <li>
         <a route-href="route: installation">Installation</a>
     </li>
+    <li if.bind="development">
+        <a route-href="route: test">Test</a>
+    </li>
     <li>
         <a route-href="route: catalog-index">Catalog index</a>
     </li>
