--- a/sample/src/test/test.html
+++ b/sample/src/test/test.html
@@ -1,5 +1,9 @@
 <template>
-  <div k-on-click.delegate="test()">
-    <button ak-button  k-on-click.trigger="test($event)">Test</button>
-  </div>
+  <ak-grid k-data-source.bind="[{},{}]" repeat.for="a of b">
+    <ak-col>
+      <ak-template>
+        <button click.delegate="hello()">Hello</button>
+      </ak-template>
+    </ak-col>
+  </ak-grid>
 </template>
