feat(dialog): added dialog wrapper
closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues/690

--- a/sample/src/catalog-index/controls.html
+++ b/sample/src/catalog-index/controls.html
@@ -169,6 +169,8 @@
               <div class="col-xs-12 col-sm-2">
                   LAYOUT                                                     <br>
                   <img src="images/blue.png">
+                  <a href="#/samples/dialog">Dialog</a>                      <br>
+                  <img src="images/blue.png">
                   <a href="#/samples/notification">Notification</a>          <br>
                   <img src="images/blue.png">
                   <a href="#/samples/responsivepanel">Responsive Panel</a>   <br>
