--- a/sample/index.html
+++ b/sample/index.html
@@ -18,9 +18,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.4.0/bluebird.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.2.1/chroma.min.js"></script>
-    <script src="kendo-sdk/js/jquery.min.js"></script>
-    <script src="kendo-sdk/js/jszip.min.js"></script>
-    <script src="kendo-sdk/js/kendo.all.min.js"></script>
+    <script src="http://kendo.cdn.telerik.com/2017.1.118/js/jquery.min.js"></script>
+    <script src="http://kendo.cdn.telerik.com/2017.1.118/js/jszip.min.js"></script>
+    <script src="http://kendo.cdn.telerik.com/2017.1.118/js/kendo.all.min.js"></script>
 
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
