--- a/sample/src/test1/test1.html
+++ b/sample/src/test1/test1.html
@@ -1,1 +1,27 @@
+<template>
 
+<require from="aurelia-kendoui-bridge/mediaplayer/mediaplayer"></require>
+<require from="aurelia-kendoui-bridge/listview/listview"></require>
+<require from="aurelia-kendoui-bridge/common/template"></require>
+
+<require from="../../kendo-sdk/styles/kendo.common.min.css!"></require>
+<require from="../../kendo-sdk/styles/kendo.default.min.css!"></require>
+<require from="../../kendo-sdk/styles/kendo.default.mobile.min.css!"></require>
+<require from="./basic-use.css!"></require>
+
+<br>
+
+<div id="example">
+
+<h3> MediaPlayer / Basic usage </h5>
+<br><br>
+
+<div class="demo-section k-content wide" style="max-width: 925px;">
+        
+<div id="mediaPlayer" style="height:360px"
+        ak-mediaplayer="k-media.bind: { title: 'Recap of Progress', source: 'https://www.youtube.com/watch?v=tc3xhD24iTU' };
+        k-auto-play.bind: true;
+        k-navigatable.bind: true;
+        k-widget.bind=mediaPlayer"></div>
+    </div>
+</template>
