--- a/sample/src/test2/test2.html
+++ b/sample/src/test2/test2.html
@@ -1,1 +1,45 @@
+<template>
+  
+<require from="aurelia-kendoui-bridge/mediaplayer/mediaplayer"></require>
+<require from="aurelia-kendoui-bridge/listview/listview"></require>
+<require from="aurelia-kendoui-bridge/common/template"></require>
 
+<require from="../../kendo-sdk/styles/kendo.common.min.css!"></require>
+<require from="../../kendo-sdk/styles/kendo.default.min.css!"></require>
+<require from="../../kendo-sdk/styles/kendo.default.mobile.min.css!"></require>
+<require from="./basic-use.css!"></require>
+
+<br>
+
+<div id="example">
+
+<h3> MediaPlayer / Playlist </h5>
+<br><br>
+
+  <div class="demo-section k-content wide" style="max-width: 925px;">
+      <div id="mediaPlayer" style="height:360px" ak-mediaplayer="k-autoPlay.bind: true; k-widget.bind:mediaPlayer">
+      </div>
+      <div class="k-list-container playlist">
+        <ul id="listView" class="k-list"></ul>
+        <ak-list-view k-data-source.bind="videos"
+                      k-selectable="true"
+                      k-scrollable="true"
+                      k-widget.bind="listView"
+                      k-on-data-bound.delegate="onDataBound($event.detail)"
+                      k-on-change.delegate="onChange()">
+                      <ak-template>
+                          <li class="k-item k-state-default">
+                            <span>
+                                <img src=${poster}>
+                                <h5>${title}</h5>
+                                </span>
+                          </li>
+                      </ak-template>
+        </ak-list-view>
+
+      </div>
+      </div>
+  </div>
+</div>
+
+</template>
