feat(chat): add chat wrapper

--- a/sample/index.html
+++ b/sample/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>Aurelia Catalog</title>
     <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.6.3/css/font-awesome.min.css">
-
     <link rel="stylesheet" href="styles/samples.css">
     <link rel="stylesheet" href="styles/styles.css">
 
@@ -20,7 +19,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.2.1/chroma.min.js"></script>
     <script src="http://kendo.cdn.telerik.com/2018.2.516/js/jquery.min.js"></script>
     <script src="http://kendo.cdn.telerik.com/2018.2.516/js/jszip.min.js"></script>
-    <script src="http://kendo.cdn.telerik.com/2018.2.516/js/kendo.all.min.js"></script>
+	<script src="http://kendo.cdn.telerik.com/2018.2.516/js/kendo.all.min.js"></script>
+	<!-- Load DialogFlow Client API -->
+	<script src="https://cdn.rawgit.com/dialogflow/dialogflow-javascript-client/50e82e62/target/ApiAi.min.js"></script>
 
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
